fix: grid & prevent word overflow

--- a/src/styles/objects/_publication.scss
+++ b/src/styles/objects/_publication.scss
@@ -1,4 +1,6 @@
 .o-publication {
+	word-break: break-word;
+
 	* {
 		&:first-child {
 			margin-top: 0;
